--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2523,7 +2523,6 @@ input, select, textarea {
 			position: absolute;
 			left: 0;
 			top: 0;
-			background-image: url("images/overlay.png");
 			width: 100%;
 			height: 100%;
 			z-index: 1;
@@ -3515,6 +3514,7 @@ input, select, textarea {
 				display: inline-block;
 				height: 18em;
 				margin-left: 3em;
+				margin-top: 10em;
 				vertical-align: middle;
 				width: 18em;
 			}
