changed to orange

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2186,11 +2186,10 @@ input, select, textarea {
 	}
 
 		header.major:after {
-			background: #e44c65;
+			background: #e49b4c;
 			content: '';
 			display: inline-block;
 			height: 0.2em;
-			max-width: 20em;
 			width: 75%;
 		}
 
